--- a/app/src/main/res/layout/album_editor_element_grid_item_header.xml
+++ b/app/src/main/res/layout/album_editor_element_grid_item_header.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/header_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:textSize="20sp" />
 
