--- a/app/src/main/res/layout/album_editor_main.xml
+++ b/app/src/main/res/layout/album_editor_main.xml
@@ -7,19 +7,15 @@
         android:id="@+id/element_list_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="130dp" />
+        android:layout_marginBottom="130dp"
+        android:orientation="vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
+        android:gravity="bottom"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
         <Button
             android:id="@+id/page_list_fragment_handle"
@@ -31,11 +27,12 @@
         <LinearLayout
             android:id="@+id/page_list_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_gravity="bottom|center"
-            android:orientation="vertical"
+            android:layout_weight="1"
             android:background="@color/colorWhite"
-            android:visibility="gone"/>
+            android:orientation="vertical"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/horizontal_page_list_fragment_container"
