--- a/app/src/main/res/layout/album_editor_horizontal_page_list_item.xml
+++ b/app/src/main/res/layout/album_editor_horizontal_page_list_item.xml
@@ -3,8 +3,26 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
-    <com.study.hancom.sharephototest.view.HDSizeWebView
-        android:id="@+id/page_list_item_webview"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <com.study.hancom.sharephototest.view.HDSizeWebView
+            android:id="@+id/page_list_item_webview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/page_list_item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:layout_margin="3dp"
+            android:background="@color/colorWhite"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+    </FrameLayout>
 </LinearLayout>
