--- a/app/src/main/res/menu/album_editor_select_multiple_picture.xml
+++ b/app/src/main/res/menu/album_editor_select_multiple_picture.xml
@@ -8,6 +8,7 @@
     <item
         android:id="@+id/action_multiple_edit"
         android:title="@string/action_album_editor_multiple_edit"
+        android:enabled="false"
         app:showAsAction="ifRoom"/>
 
     <item
