--- a/app/src/main/res/menu/album_editor_select_single_picture.xml
+++ b/app/src/main/res/menu/album_editor_select_single_picture.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/action_single_edit"
         android:title="@string/action_album_editor_single_edit"
+        android:enabled="false"
         app:showAsAction="ifRoom"/>
 
     <item
