--- a/app/src/main/res/layout/gallery_full_size_picture_main.xml
+++ b/app/src/main/res/layout/gallery_full_size_picture_main.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
-    <ImageView
-        android:id="@+id/show_image_view"
+    <com.study.hancom.sharephototest.view.ScalableLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/show_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.study.hancom.sharephototest.view.ScalableLinearLayout>
 
     <Button
-        android:text="◀"
+        android:id="@+id/button_previous"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/button_previous" />
+        android:layout_centerVertical="true"
+        android:text="◀" />
 
     <Button
-        android:text="▶"
+        android:id="@+id/button_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/button_next" />
+        android:layout_centerVertical="true"
+        android:text="▶" />
 
 </RelativeLayout>
