--- a/app/src/main/res/menu/gallery_full_size_picture_main.xml
+++ b/app/src/main/res/menu/gallery_full_size_picture_main.xml
@@ -7,4 +7,9 @@
         app:actionViewClass="android.widget.CheckBox"
         app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/action_select"
+        android:title="@string/action_gallery_full_size_select"
+        app:showAsAction="always"/>
+
 </menu>
