--- a/app/src/main/res/layout/album_editor_element_grid_item_header.xml
+++ b/app/src/main/res/layout/album_editor_element_grid_item_header.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
+        android:layout_margin="2dp"
         android:textSize="20sp" />
 
     <LinearLayout
